# tickdb

./: .clang-format  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  TODO  a.out  query.json
examples/: Makefile  trades.c
lib/: column.c  column.h  hashmap.c  hashmap.h  inttypes.h  schema.c  schema.cc  schema.h  string.h  tickdb.c  tickdb.cc  tickdb.h  tickdb_util.c  time.c  time.h  util.h  vec.h  wyhash.h
src/: column.c  column.h  http.rs  lib.rs  main.rs  schema.c  schema.h  schema.rs  table.c  table.h  tickdb.h
src/server/: mod.rs  query.rs  runtime.js
src/server/langs/: julia.rs  julia_bindings.rs  mod.rs  v8.rs
src/table/: columns.rs  meta.rs  mod.rs  paths.rs  read.rs  write.rs
src/util/: hashmap.h  mmappool.h  platform.h  prelude.h  string.h  time.c  time.h  time.rs  vec.h  vecmmap.c  vecmmap.h  wyhash.h
tests/: post.jl  post.js  query.jl  query.js  table.rs
tools/: Makefile  blockutil.c
