[package]
name = "tickdb"
version = "0.1.0"
authors = ["clickingbuttons"]
edition = "2021"
license = "MIT"
description = "Row-scan memory mapped DB for tick data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parsing config and metadata files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
# Cross-platform `mmap`. TODO: generic allocator, mremap
memmap = "0.7"

# Server
nix = "0.24"
http = "0.2.7"
httparse = "1.7.1"

[dev-dependencies]
fastrand = "1.4"

[profile.release]
debug = true
