[package]
name = "tickdb"
version = "0.1.0"
authors = ["clickingbuttons"]
edition = "2021"
license = "MIT"
description = "Row-scan memory mapped DB for tick data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Parsing config, metadata files, and queries
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
# Cross-platform `mmap`. TODO: generic allocator, mremap
memmap = "0.7"

# Server
nix = "0.24.1"
tiny_http = "0.11.0"
v8 = "0.43.1"
log = "0.4.17"
simple_logger = "2.1.0"

[dev-dependencies]
fastrand = "1.4"

[profile.release]
debug = true
